<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.ekumid.Registration"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register/Login"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold"

            />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:layout_marginTop="10dp"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
               />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:layout_marginTop="10dp"
                android:id="@+id/pass"
                android:inputType="textPassword"
                android:singleLine="true"
                />
        </android.support.design.widget.TextInputLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_login"
            android:elevation="5dp"
            android:id="@+id/login"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="30dp"
            android:textColor="#FFF1F1EF"

            />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="If not Registered...? Click here"
            android:textAlignment="center"
            android:id="@+id/submit"
            android:textColor="#8f8f43"
            android:layout_marginTop="20dp"/>






    </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>


</ScrollView>
