<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.ekumid.Weight"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">


    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Vehicle Weight"
                android:textAlignment="center"
                android:textSize="25dp"
                android:textStyle="bold"

                />



            <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_rcno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_rcno"
            android:layout_marginTop="10dp"
            android:id="@+id/rcno"
            android:inputType="textEmailAddress"
            />
    </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_weight"
                    android:layout_marginTop="10dp"
                    android:id="@+id/weight"
                    android:inputType="textEmailAddress"
                    />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_submit1"
                android:elevation="5dp"
                android:id="@+id/submit"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="40dp"
                android:textColor="#FFF1F1EF"

                />


        </LinearLayout>





    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
